<resources>
    <string name="app_name">MeliApp</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Search Fragment -->
    <string name="search_screen_title">Buscar</string>

    <!-- Result List Fragment -->
    <string name="result_list_screen_title">Lista de resultados</string>

    <!-- Detail Product Fragment -->
    <string name="detail_product_screen_title">Detalle</string>
    <string name="search">Buscar</string>
    <string name="search_welcome_message">Bienvenido, por favor ingrese su busqueda y de click en el boton buscar</string>
    <string name="search_signature">Desarrollado por: Jorge López</string>
    <string name="search_empty_query_string_message">El campo de busqueda esta vacío</string>
    <string name="empty_view_message">No hay datos</string>
    <string name="api_result_error_message">Se ha presentado un error, compruebe su conexión e intente de nuevo</string>

</resources>