<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/search_navigation"
    app:startDestination="@id/searchHomeFragment">

    <fragment
        android:id="@+id/searchHomeFragment"
        android:name="com.example.meliapp.app.search.home.view.SearchHomeFragment"
        android:label="@string/search_screen_title"
        tools:layout="@layout/fragment_search_home" />
    <fragment
        android:id="@+id/resultListFragment"
        android:name="com.example.meliapp.app.search.list.view.ResultListFragment"
        android:label="@string/result_list_screen_title"
        tools:layout="@layout/fragment_result_list" />
    <fragment
        android:id="@+id/detailProductFragment"
        android:name="com.example.meliapp.app.search.detail.view.DetailProductFragment"
        android:label="@string/detail_product_screen_title"
        tools:layout="@layout/fragment_detail_product" />
</navigation>